terraform/eks-sg/eks-sgs.tf
resource "aws_security_group" "worker_node_sg" {
  name        = "worker_node_sg"
  description = "Allow ssh acces on port 22"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # Allowing from anywhere
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # Allow Kubernetes API server access
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"  # Allow all outbound traffic
    cidr_blocks = ["0.0.0.0/0"]
  }
    tags = {
    Name = "worker_node_sg"
  }
}
